# embedpy

./: CMakeLists.txt  quick.cpp
